--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -6,7 +6,8 @@ on:
       - main
     paths:
       - Dockerfile
-      - .upstream-unbound.digest
+      - ./versions/.upstream-unbound.digest
+      - ./versions/.upstream-unbound.semver
 
 jobs:
   build:
@@ -30,27 +31,17 @@ jobs:
           echo "full=$FULL_DIGEST" >> "$GITHUB_OUTPUT"
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
 
-      - name: Pull upstream image
-        run: docker pull alpinelinux/unbound:latest
-
-      - name: Extract upstream Unbound version (SemVer)
+      - name: Read upstream SemVer
         id: semver
         run: |
-          VER=$(docker run --rm alpinelinux/unbound:latest unbound -V | head -n1 | awk '{print $2}')
-          echo "semver=v$VER" >> "$GITHUB_OUTPUT"
+          SEMVER=$(cat ./versions/.upstream-unbound.semver)  # e.g. v1.20.0
+          echo "semver=$SEMVER" >> "$GITHUB_OUTPUT"
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate Dockerfile from template
+        shell: bash
+        run: |
+          DIGEST="${{ steps.digest.outputs.full }}"
+          sed "s|{{UpstreamDigest}}|$DIGEST|" ./dev/Dockerfile.tpl > ./docker/Dockerfile
 
       - name: Build image
         run: |
@@ -61,12 +52,18 @@ jobs:
             -t igox/unbound-customized:${{ steps.semver.outputs.semver }} \
             .
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}            
+
       - name: Push image to Docker Hub
         run: |
           docker push igox/unbound-customized:latest
           docker push igox/unbound-customized:${{ steps.digest.outputs.tag }}
           docker push igox/unbound-customized:${{ steps.semver.outputs.semver }}
-
+          
       - name: Tag for GHCR
         run: |
           docker tag igox/unbound-customized:latest \
@@ -77,6 +74,13 @@ jobs:
 
           docker tag igox/unbound-customized:${{ steps.semver.outputs.semver }} \
             ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.semver.outputs.semver }}
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}            
 
       - name: Push image to GHCR
         run: |
