--- a/.github/workflows/unbound-check.yml
+++ b/.github/workflows/unbound-check.yml
@@ -99,8 +99,8 @@ jobs:
 
       - name: Save new digest and semver
         run: |
-          echo "${{ steps.digest.outputs.digest }}" > .upstream-unbound.digest
-          echo "${{ steps.semver.outputs.semver }}" > .upstream-unbound.semver
+          echo "${{ steps.digest.outputs.digest }}" > ./versions/.upstream-unbound.digest
+          echo "${{ steps.semver.outputs.semver }}" > ./versions/.upstream-unbound.semver
 
       - name: Create/update update PR
         if: steps.compare.outputs.updated == 'true'
@@ -108,10 +108,12 @@ jobs:
         with:
           commit-message: "chore: update upstream unbound docker image to latest"
           title: "Update Unbound base image → tag: latest / digest: ${{ steps.digest.outputs.digest_tag }}"
-          body: "Upstream `alpinelinux/unbound` docker image updated.\n\nThis PR updates the base image to the latest version:\n-Upstream docker image digest: **${{ steps.digest.outputs.digest }}**\n-Upstream Unbound version: **${{ steps.semver.outputs.semver }}**"
+          body: "# Upstream `alpinelinux/unbound` docker image updated.\n\nThis PR updates the base image to the latest version:\n- Upstream docker image digest: **${{ steps.digest.outputs.digest }}**\n- Upstream Unbound version: **${{ steps.semver.outputs.semver }}**"
           branch: auto/unbound-update/${{ steps.digest.outputs.digest_tag }}
           base: main
           add-paths: |
-            .upstream-unbound.digest
-            .upstream-unbound.semver
+            ./versions/.upstream-unbound.digest
+            ./versions/.upstream-unbound.semver
+            ./docker/Dockerfile
             CHANGELOG.md
+            
