--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -41,7 +41,9 @@ jobs:
         shell: bash
         run: |
           DIGEST="${{ steps.digest.outputs.full }}"
-          sed "s|{{UpstreamDigest}}|$DIGEST|" ./dev/Dockerfile.tpl > ./docker/Dockerfile
+          UNBOUND_VERSION="${{ steps.semver.outputs.semver }}"
+          sed "s|{{UpstreamImageDigest}}|$DIGEST|" ./dev/Dockerfile.tpl > ./docker/Dockerfile   # First replace: create Dockerfile
+          sed -i "s|{{UpstreamUnboundVersion}}|$UNBOUND_VERSION|" ./docker/Dockerfile           # Second replace done in place. Next replace to be also done in place. in place.
 
       - name: Build image
         run: |
