--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -45,47 +45,36 @@ jobs:
           sed "s|{{UpstreamImageDigest}}|$DIGEST|" ./dev/Dockerfile.tpl > Dockerfile   # First replace: create Dockerfile
           sed -i "s|{{UpstreamUnboundVersion}}|$UNBOUND_VERSION|" Dockerfile           # Second replace done inplace ("-i"). Next replace to be also done in place. in place.
 
-      - name: Build image
-        run: |
-          docker build \
-            -t igox/unbound-customized:latest \
-            -t igox/unbound-customized:${{ steps.digest.outputs.tag }} \
-            -t igox/unbound-customized:${{ steps.semver.outputs.semver }} \
-            .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}            
-
-      - name: Push image to Docker Hub
-        run: |
-          docker push igox/unbound-customized:latest
-          docker push igox/unbound-customized:${{ steps.digest.outputs.tag }}
-          docker push igox/unbound-customized:${{ steps.semver.outputs.semver }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
           
-      - name: Tag for GHCR
-        run: |
-          docker tag igox/unbound-customized:latest \
-            ghcr.io/${{ github.repository_owner }}/unbound-customized:latest
-
-          docker tag igox/unbound-customized:${{ steps.digest.outputs.tag }} \
-            ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.digest.outputs.tag }}
-
-          docker tag igox/unbound-customized:${{ steps.semver.outputs.semver }} \
-            ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.semver.outputs.semver }}
-
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}            
+          password: ${{ secrets.GITHUB_TOKEN }}           
 
-      - name: Push image to GHCR
-        run: |
-          docker push ghcr.io/${{ github.repository_owner }}/unbound-customized:latest
-          docker push ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.digest.outputs.tag }}
-          docker push ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.semver.outputs.semver }}
+      - name: Build and push multi-arch image
+        uses: docker/build-push-action@v6
+        with:
+          file: dev/Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: |
+            igox/unbound-custom:latest
+            igox/unbound-custom:${{ steps.semver.outputs.semver }}
+            igox/unbound-custom:${{ steps.digest.outputs.digest_tag }}    
+            ghcr.io/${{ github.repository_owner }}/unbound-customized:latest    
+            ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.digest.outputs.tag }}  
+            ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.semver.outputs.semver }}
 
