--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -73,7 +73,7 @@ jobs:
           tags: |
             igox/unbound-custom:latest
             igox/unbound-custom:${{ steps.semver.outputs.semver }}
-            igox/unbound-custom:${{ steps.digest.outputs.digest_tag }}    
+            igox/unbound-custom:${{ steps.digest.outputs.tag }}    
             ghcr.io/${{ github.repository_owner }}/unbound-customized:latest    
             ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.digest.outputs.tag }}  
             ghcr.io/${{ github.repository_owner }}/unbound-customized:${{ steps.semver.outputs.semver }}
