--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
     paths:
+      - docker/**/*
       - dev/Dockerfile.tpl
       - versions/.upstream-unbound.digest
-      - versions/.upstream-unbound.semver
 
 jobs:
   build:
